--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,15 @@
 {
   "version": 2,
-  "buildCommand": "cd portfolio-app && npm install && npm run build",
+  "buildCommand": "cd portfolio-app && npm ci && npm run build",
   "outputDirectory": "portfolio-app/build",
-  "installCommand": "npm install",
+  "installCommand": "echo 'Skipping root installation'",
   "routes": [
     { "handle": "filesystem" },
+    { "src": "/static/(.*)", "dest": "/static/$1" },
+    { "src": "/favicon.ico", "dest": "/favicon.ico" },
+    { "src": "/manifest.json", "dest": "/manifest.json" },
+    { "src": "/logo192.png", "dest": "/logo192.png" },
+    { "src": "/logo512.png", "dest": "/logo512.png" },
     { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
