--- a/portfolio-app/package.json
+++ b/portfolio-app/package.json
@@ -4,24 +4,38 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
-    "@testing-library/dom": "^9.3.3",
-    "@testing-library/jest-dom": "^6.1.5",
-    "@testing-library/react": "^14.1.2",
-    "@testing-library/user-event": "^14.5.1",
+    "@craco/craco": "^7.1.0",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "assert": "^2.1.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
+    "https-browserify": "^1.0.0",
     "nodemailer": "^6.9.7",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
-    "react-icons": "^4.12.0",
-    "react-router-dom": "^6.19.0",
+    "react-icons": "^4.11.0",
+    "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "styled-components": "^6.1.19",
+    "url": "^0.11.3",
     "web-vitals": "^2.1.4"
   },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "babel-plugin-module-resolver": "^5.0.0"
+  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "DISABLE_ESLINT_PLUGIN=true CI=false react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "DISABLE_ESLINT_PLUGIN=true CI=false NODE_OPTIONS=--openssl-legacy-provider craco build",
+    "test": "craco test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -41,5 +55,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "resolutions": {
+    "react-icons": "^4.11.0",
+    "react-router-dom": "^6.18.0"
   }
 }
