--- a/updated-vercel.json
+++ b/updated-vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "buildCommand": "cd portfolio-app && npm install --legacy-peer-deps --force && npm run build",
+  "buildCommand": "./vercel-build.sh",
   "outputDirectory": "portfolio-app/build",
   "installCommand": "cd portfolio-app && npm install --legacy-peer-deps --force",
   "framework": "create-react-app",
