--- a/portfolio-app/vercel.json
+++ b/portfolio-app/vercel.json
@@ -4,8 +4,5 @@
   ],
   "installCommand": "npm install --legacy-peer-deps --force",
   "buildCommand": "NODE_OPTIONS=--openssl-legacy-provider npm run build",
-  "framework": "create-react-app",
-  "buildEnvironment": {
-    "NODE_OPTIONS": "--openssl-legacy-provider"
-  }
+  "framework": "create-react-app"
 }
